// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage renders page 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3"
                  >
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn ant-btn-primary"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage renders page with authors profile section when user has author profile 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3"
                  >
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn ant-btn-primary"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Author email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <p>
                  Change the email addresses registered on your author profile. These are used by other INSPIRE users to contact you and for the automatic matching of your papers.
                </p>
                <a
                  class="db pb3"
                  data-test-id="author-form"
                  href="/submissions/authors/1234567"
                >
                  Update author information
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage renders page with error 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-alert ant-alert-error"
        data-show="true"
        role="alert"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle ant-alert-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </span>
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            Error occured
          </div>
        </div>
        <button
          class="ant-alert-close-icon"
          tabindex="0"
          type="button"
        >
          <span
            aria-label="close"
            class="anticon anticon-close"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mv3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3"
                  >
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn ant-btn-primary"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingsPage renders page with orcid section when user has orcid profile 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center ant-row-middle mv3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-card ant-card-bordered"
      >
        <div
          class="ant-card-body"
          style="padding: 12px 16px;"
        >
          <h2>
            Settings
          </h2>
          <p>
            Manage your Inspire account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-row-center ant-row-middle mb3"
  >
    <div
      class="ant-col ant-col-xs-24 ant-col-md-22 ant-col-lg-21 ant-col-xxl-18"
    >
      <div
        class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless __CollapsableForm__"
      >
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Account email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="false test@test.pl"
              >
                <form
                  action="#"
                >
                  <p>
                    Change the email address associated to your INSPIRE account. This is used by the INSPIRE system to contact you automatically (e.g. job ad closing, submission confirmation, etc.).
                  </p>
                  <div
                    class="ant-row flex-email pt3"
                  >
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control ant-col-sm-24 ant-col-md-19"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <input
                                class="ant-input"
                                data-test-id="email"
                                data-testid="email"
                                form="[object Object]"
                                name="email"
                                placeholder="Email"
                                type="email"
                                value="test@test.pl"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="ant-btn ant-btn-primary"
                      data-test-id="submit-email"
                      data-testid="submit-email"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Change
                      </span>
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Author email address
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <p>
                  Change the email addresses registered on your author profile. These are used by other INSPIRE users to contact you and for the automatic matching of your papers.
                </p>
                <a
                  class="db pb3"
                  data-test-id="author-form"
                  href="/submissions/authors/1234567"
                >
                  Update author information
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-collapse-item ant-collapse-item-active bg-white mb3 overflow-hidden"
          data-test-id="orcid"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="ant-collapse-header"
            role="button"
            tabindex="0"
          >
            <div
              class="ant-collapse-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right ant-collapse-arrow"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  style="transform: rotate(90deg);"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
            <span
              class="ant-collapse-header-text"
            >
              <h3
                class="fw6"
              >
                Orcid settings
              </h3>
            </span>
          </div>
          <div
            class="ant-collapse-content ant-collapse-content-active"
          >
            <div
              class="ant-collapse-content-box"
            >
              <div
                data-testid="1234567"
              >
                <div
                  class="mb3"
                >
                  <span
                    class="mr2"
                  >
                    Export your INSPIRE works to ORCID
                  </span>
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    data-test-id="orcid-switch"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
                <div>
                  <div
                    data-testid="orcid-push-setting-message"
                  >
                    <p>
                      Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
